@@ -17,6 +17,8 @@ t/09leading-path.t
 t/10ul-classes.t
 t/11predicate.t
 t/12x-host-rel-url.t
+t/13escape-html.t
+lib/HTML/Widgets/NavMenu/EscapeHtml.pm
 lib/HTML/Widgets/NavMenu/HeaderRole.pm
 lib/HTML/Widgets/NavMenu/Iterator/Base.pm
 lib/HTML/Widgets/NavMenu/Iterator/Html.pm
