@@ -1,11 +1,10 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         HTML-Widgets-NavMenu
-version:      0.4.0
+version:      0.5.0_00
 version_from: lib/HTML/Widgets/NavMenu.pm
 installdirs:  site
 requires:
-    CGI:                           0
     Class::Accessor:               0
     Error:                         0
     Test::More:                    0
